small fixes, video format

--- a/09_networking/index.html
+++ b/09_networking/index.html
@@ -28,23 +28,23 @@
 
 <h4>assignment:</h4>
 
-i decided to incorporate a remote control into my final project. currently, the 
+i decided to incorporate a remote control into my movable dress (final project). currently, the 
 buttons that power the petal motion are connected to the same ESP32 as the 
 servo motors. this makes it hard to start and stop, since the petals need 
 to be lifted for the buttons to be pressed. 
-
-i used ESP-NOW radio to connect the remote control to the ESP32. i maintained
+<br><br>
+with ESP-NOW radio, i connected the remote control to the ESP32. i maintained
 the two buttons i had previously, where if you press one button, the petals open and close. 
-when you press the other button, the petals open and close in a wave-like pattern. if you 
-press the button again, the petals stop.  
+if you press again, the petals stop. when you press the other button, the petals open and close in a wave-like pattern,
+and if you press again, the petals stop.  
 
 <p class="margin">   </p>
 <h4>video demo</h4>
 <p>here's a video demonstration of the petals in action with the remote control:</p>
 
-<div class="video-container">
-  <video width="100%" controls>
-    <source src="petals.MOV" type="video/quicktime">
+<div class="video-container" style="display: flex; justify-content: center;">
+  <video width="60%" controls>
+    <source src="petals.MOV" type="video/mp4">
     Your browser does not support the video tag.
   </video>
 </div>
