--- a/10_machine/index.html
+++ b/10_machine/index.html
@@ -25,9 +25,11 @@
 <div class="textcontainer">
 <p class="margin">   </p>
 
-<h3>Weeks 10-12: Machine Building</h3>
+<h3>weeks 10-12: machine building</h3>
 
-<h4>Assignment: Build a Drawing Robot</h4>
+<h4>assignment: build a drawing robot</h4>
+
+https://dicuve06.github.io/PS70/10_machine/index.html
 
 
 </div>
