--- a/13_finalproject/index.html
+++ b/13_finalproject/index.html
@@ -97,7 +97,7 @@
     <!-- 1. initial designs -->
     <h5 id="initial-designs">1. initial designs</h5>
     <p>i began by sketching the overall dress design, including a 3d printed top and the interactive skirt with
-      servo-controlled petals. i designed the petal mechanism in fusion 360, creating attachment points that could
+      moving petals. i designed the petal mechanism in fusion 360, creating attachment points that could
       connect to both the servo motor arm and the petal itself, and experimented with different petal shapes and skirt
       silhouettes before settling on the final direction. i did shift a little from my initial designs shown below: </p>
 
